# Django_lnwpoon

./: build.sh  manage.py  pyproject.toml  requirements.txt  settings.py  vercel.json
app/: settings.py  urls.py
myapp/: views.py
myweb/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
myweb/app/: settings.py
myweb/myapp/: urls.py  views.py
staticfiles/: staticfiles.json
statics/assets/demo/: chart-area-demo.js
templates/: about.html  base.html  contact.html  index.html
