[project]
name = "django-project"
version = "0.1.0"
description = "Django Project"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.11.1",
    "Django==6.0.6",
    "sqlparse==0.5.5",
    "whitenoise==6.12.0",
    "dj-database-url==3.1.2",
    "psycopg2-binary==2.9.12",
    "black==26.5.1",
]

[tool.black]
line-length = 88
target-version = ['py313']
exclude = '''
/(
    \.git
  | \.venv
  | env
  | build
  | dist
)/
'''
